--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,3 @@
-/* iOS only */
-@supports (-webkit-touch-callout: none) { 
-    height: -webkit-fill-available;
-}
-
 @font-face {
     font-family: 'PyeongChangPeace-Bold';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Bold.woff2') format('woff2');
@@ -31,6 +26,13 @@ body {
     position: relative;
     display: flex;
     place-items: center;
+}
+
+/* iOS only */
+@supports (-webkit-touch-callout: none) { 
+    body{
+        height: -webkit-fill-available;
+    }
 }
 
 .Pyeong-Bold-White {
