--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,19 +20,13 @@
 html,
 body {
     margin: 0;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     width: 100%;
     overflow-x: hidden;
     position: relative;
     display: flex;
     place-items: center;
-}
-
-/* iOS only */
-@supports (-webkit-touch-callout: none) { 
-    body{
-        height: -webkit-fill-available;
-    }
 }
 
 .Pyeong-Bold-White {
