--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, minimal-ui, viewport-fit=cover">
+        <meta name="theme-color" content="#000000">
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
         <title>한서대 대동제</title>
         {% block head %} {% endblock head %} 
@@ -26,7 +27,7 @@
         {% block content%} {% endblock content %} 
         
         {% block script %} {% endblock script %}
-        
+        <script> console.log(window.innerHeight);</script>
         <script type="text/javascript" src="{% static "js/script.js" %}"></script>
     </body>
 </html>
