--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@
 html,
 body {
     margin: 0;
-    height: calc(var(--vh) * 100);
+    height: 100vh;
     width: 100%;
     overflow-x: hidden;
     position: relative;
