--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@
 html,
 body {
     margin: 0;
-    width: 100vh;
+    width: 100%;
     height: calc(var(--vh) * 100);
     overflow-x: hidden;
     position: relative;
