--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,8 +21,8 @@ html,
 body {
     margin: 0;
     width: 100%;
-    /* height: calc(var(--vh) * 100); */
-    height: 100dvh;
+    height: calc(var(--vh) * 100);
+    /* height: 100dvh; */
     overflow-x: hidden;
     position: relative;
     display: flex;
