--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 65dvh;
+  /* height: 65dvh; */
+  height: calc(var(--var) * 65);
   align-items: center;
 }
 
@@ -10,7 +11,8 @@
   /* width: 336px; */
   width: 86vw;
   /* height: 510px; */
-  height: 62dvh;
+  /* height: 57dvh; */
+  height: clac(var(--var) * 57);
   overflow-y: scroll;
   border-radius: 10px;
 }
@@ -67,7 +69,9 @@
 
 .nameInput {
   width: 18%;
-  height: 4.9vh;
+  /* height: 4.9vh; */
+  height: clac(var(--var) * 4.9);
+  min-height: 38px;
   border-radius: 10px;
   background: rgba(249, 250, 252, 0.20);
   border: 0;
@@ -79,7 +83,9 @@
 
 .inputBox {
   width: 80%;
-  height: 4.9vh;
+  /* height: 4.9vh; */
+  height: clac(var(--var) * 4.9);
+  min-height: 38px;
   display: flex;
 }
 
