--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -12,7 +12,7 @@
   width: 86vw;
   /* height: 510px; */
   /* height: 57dvh; */
-  height: clac(var(--var) * 57);
+  /* height: clac(var(--var) * 57); */
   overflow-y: scroll;
   border-radius: 10px;
 }
@@ -63,6 +63,7 @@
   /* top: 775px; */
   /* bottom: 20px; */
   width: 86vw;
+  margin-top: 15px
   /* left: 50%; */
   /* transform: translateX( -50% ); */
 }
@@ -70,7 +71,7 @@
 .nameInput {
   width: 18%;
   /* height: 4.9vh; */
-  height: clac(var(--var) * 4.9);
+  height: calc(var(--vh) * 4.9);
   min-height: 38px;
   border-radius: 10px;
   background: rgba(249, 250, 252, 0.20);
@@ -84,7 +85,8 @@
 .inputBox {
   width: 80%;
   /* height: 4.9vh; */
-  height: clac(var(--var) * 4.9);
+  height: calc(var(--vh) * 4.9);
+  min-height: 38px;
   min-height: 38px;
   display: flex;
 }
