--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   /* height: 65dvh; */
-  height: calc(var(--var) * 65);
+  height: calc(var(--vh) * 65);
   align-items: center;
 }
 
